--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -72,10 +72,151 @@
     text-align: center;
 }
 
+/* navbar ends here */
+/* goat section starts here */
+.goat-container {
+    position: relative;
+    display: flex;
 
-
-.yo {
-    display: none;
 }
 
+.goat-content {
+    border: 2px solid red;
+    position: absolute;
+    width: 901px;
+    height: 700px;
 
+
+}
+
+.tittle-1 {
+    color: #0B0223;
+
+    font-family: Work Sans;
+    font-size: 45px;
+
+    font-weight: 600;
+
+    text-transform: uppercase;
+   
+
+}
+
+.tittle-2 {
+
+    font-family: Work Sans;
+    font-size: 70px;
+
+    font-weight: 800;
+
+    text-transform: uppercase;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+   
+}
+
+.goat-content>ul>li {
+    list-style: none;
+    color: #534C64;
+    font-family: Work Sans;
+    font-size: 20px;
+
+    font-weight: 500;
+
+}
+.btn-1{color: white;
+  background-color: #F948B2;
+  padding: 15px 30px;
+  border-radius: 16px;
+  border: none;
+}
+.btn-2{color: white;
+    background-color: #4EC5F7;
+    padding: 15px 40px;
+    border-radius: 16px;
+    border: none;
+}
+/* goat section ends here */
+/* video sections starts */
+.videos-tittle{
+text-align: center;
+}
+.video-container{
+    display: flex;
+}
+/* vide0 section ends here */
+/* online game section starts */
+.online-game-container{
+    display: flex;
+    background: #FFF;
+}
+/* online game section ends */
+/* game type section starts */
+.game-type{
+    height: 300px;
+    
+}
+.game-type-container{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 200px;
+    margin-top: 200px;
+    
+    
+    
+    
+}
+#arcade{
+    border:2px solid #F948B2;
+}
+.game-type-container button{
+   
+padding: 25px 35px;
+border-radius: 20px;
+border: none;
+color: #0B0223;
+font-family: Work Sans;
+font-size: 20px;
+font-weight: 600;
+
+}
+.game-type-container button:hover{
+    border: 1px solid #F948B2;
+    color: #F948B2;
+}
+/* game type section ends */
+/* footer section */
+.footer{
+    height: 400px;
+    background-color: #0B0223;
+    display: flex;
+   
+}
+.logo{
+    
+
+}
+.footer-tittle{
+    color: #FFF;
+font-family: Work Sans;
+font-size: 45px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.footer-content{
+    display: flex;
+    color: #fff;
+}
+.footer-logo{
+    display: flex;
+}
+.footer-terms{
+    display: flex;
+    color: #fff; 
+}
+.footer-foot{
+    color: #fff; 
+}
