--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -98,7 +98,7 @@
     font-weight: 600;
 
     text-transform: uppercase;
-   
+
 
 }
 
@@ -114,7 +114,7 @@
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-   
+
 }
 
 .goat-content>ul>li {
@@ -126,122 +126,237 @@
     font-weight: 500;
 
 }
-.btn-1{color: white;
-  background-color: #F948B2;
-  padding: 15px 30px;
-  border-radius: 16px;
-  border: none;
+
+.btn-1 {
+    color: white;
+    background-color: #F948B2;
+    padding: 15px 30px;
+    border-radius: 16px;
+    border: none;
 }
-.btn-2{color: white;
+
+.btn-2 {
+    color: white;
     background-color: #4EC5F7;
     padding: 15px 40px;
     border-radius: 16px;
     border: none;
 }
+
 /* goat section ends here */
 /* video sections starts */
-.videos-tittle{
-text-align: center;
+.videos-tittle {
+    text-align: center;
 }
-.video-container{
+
+.videos-tittle>h3 {
+    color: #0B0223;
+
+    font-family: Work Sans;
+    font-size: 48px;
+
+    font-weight: 700;
+    margin-bottom: -10px;
+
+}
+
+.videos-tittle>p {
+    color: #534C64;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 18px;
+
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.video-container {
+    margin-bottom: 100px;
     display: flex;
+
+    justify-content: center;
+
+
 }
+
+.hoverdiv:hover{
+    opacity: 0.3
+}
+
+  
+  
+
+.imagediv {
+    padding: 0 20px;
+}
+
+.imagediv>p {
+    color: #534C64;
+    font-family: Work Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 30px;
+    width: 300px;
+
+}
+
 /* vide0 section ends here */
 /* online game section starts */
-.online-game-container{
+.online-game-container {
     display: flex;
     background: #FFF;
 }
+
+.online-game-content {
+    width: 50%;
+
+}
+
+.online-game-tittle {
+    border: 2px solid red;
+    margin-left: 150px;
+    margin-top: 200px;
+
+    color: #0B0223;
+    font-family: Work Sans;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 60px;
+
+
+}
+
+.online-game-description {
+    margin-left: 150px;
+    border: 2px solid green;
+    color: #534C64;
+    font-family: Work Sans;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    width: 300px;
+}
+
+.online-game-img {}
+
+.online-game-img1 {
+    position: absolute;
+
+}
+
+.online-game-img2 {
+    position: relative;
+    margin-top: 175px;
+    z-index: 2;
+    top: 150px;
+    left: -90px;
+}
+
 /* online game section ends */
 /* game type section starts */
-.game-type{
+.game-type {
     height: 300px;
-    
+
 }
-.game-type-container{
+
+.game-type-container {
     display: flex;
     justify-content: space-evenly;
     margin: 0 200px;
     margin-top: 200px;
-    
-    
-    
-    
-}
-#arcade{
-    border:2px solid #F948B2;
-}
-.game-type-container button{
-   
-padding: 25px 35px;
-border-radius: 20px;
-border: none;
-color: #0B0223;
-font-family: Work Sans;
-font-size: 20px;
-font-weight: 600;
+
+
+
 
 }
-.game-type-container button:hover{
+
+#arcade {
+    border: 2px solid #F948B2;
+}
+
+.game-type-container button {
+
+    padding: 25px 35px;
+    border-radius: 20px;
+    border: none;
+    color: #0B0223;
+    font-family: Work Sans;
+    font-size: 20px;
+    font-weight: 600;
+
+}
+
+.game-type-container button:hover {
     border: 1px solid #F948B2;
     color: #F948B2;
 }
+
 /* game type section ends */
 /* footer section */
-.footer{
+.footer {
     height: 500px;
     background-color: #0B0223;
-   
-   
+
+
 }
-.logo{
+
+.logo {
     display: flex;
     justify-content: center;
 
 }
-.logo img{
+
+.logo img {
     width: 80px;
     height: 36px;
     margin-top: 55px;
     margin-right: 20px;
 }
-.footer-tittle{
+
+.footer-tittle {
     color: #FFF;
-font-family: Work Sans;
-font-size: 45px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+    font-family: Work Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 
 }
-.footer-content{
+
+.footer-content {
     display: flex;
     color: #fff;
     list-style: none;
     justify-content: space-evenly;
     margin-left: 250px;
     margin-right: 250px;
-    
+
 }
-.footer-logo{
+
+.footer-logo {
     display: flex;
     justify-content: space-evenly;
     margin-left: 500px;
     margin-right: 500px;
     margin-top: 60px;
 }
-.footer-terms{
+
+.footer-terms {
     display: flex;
     color: #fff;
-    list-style: none; 
+    list-style: none;
     justify-content: space-evenly;
     margin-left: 400px;
     margin-right: 400px;
     margin-top: 60px;
 }
-.footer-foot{
+
+.footer-foot {
     color: #fff;
     margin-left: 700px;
     margin-top: 60px;
-    
 }
+
+/* }footer section ends */
