--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -85,6 +85,9 @@
     position: absolute;
     width: 901px;
     height: 700px;
+    text-align: left;
+    margin-left: 200px;
+
 
 
 }
@@ -98,12 +101,12 @@
     font-weight: 600;
 
     text-transform: uppercase;
-
+   padding-top: 100px;
 
 }
 
 .tittle-2 {
-
+    margin-top: -20px;
     font-family: Work Sans;
     font-size: 70px;
 
@@ -124,6 +127,8 @@
     font-size: 20px;
 
     font-weight: 500;
+    
+    
 
 }
 
