--- a/styles.css/responsive.css
+++ b/styles.css/responsive.css
@@ -87,7 +87,8 @@
 
 @media screen and (min-width:576px) and (max-width:960px){
 
-     .nav-container,
+    /* nav responsive */
+    .nav-container,
     .nav-item-container{
         flex-direction: column;
     }
@@ -97,6 +98,74 @@
    .follow{
     padding: 0;
     margin-top: 20px;
-    margin-right: 110px;
    }
+   /* goat responsive */
+   .goat-container{
+    flex-direction: column;
+   }
+   .goat-content{
+    margin-left: 0;
+    
+   }
+   .goat-content > ul{
+    padding-left: 0;
+   }
+   .goat-image{
+    margin-top: 200px;
+    width: 100%;
+    
+   }
+   /* video section responsive */
+   .video-container{
+    flex-direction: column;
+    margin-left: -20px;
+    
+   }
+   /* online game section */
+   .online-game-container{
+    flex-direction: column;
+   }
+   .online-game-tittle{
+    margin-left: 0;
+    margin-top: 0;
+   }
+   .online-game-description{
+    margin-left: 0;
+   }
+   .online-game-img1{
+   width: 100%;
+   }
+   .online-game-img2{
+    width: 100%;
+    margin-top: 300px;
+   }
+   /* game type section */
+   .game-type-container{
+    flex-direction: column;
+    margin: 0;
+    margin-top: 200px;
+   }
+   /* footer section */
+    .footer{
+        margin-top: 200px;
+        height: 1200px;
+    }
+    .footer-content{
+        flex-direction: column;
+        margin-left: 0;
+        gap: 25px;
+    }
+    .footer-logo{
+        flex-direction: column;
+        margin-left: 0;
+        gap: 20px;
+    }
+    .footer-terms{
+        flex-direction: column;
+        margin-left: 0;
+        gap: 10px;
+    }
+    .footer-foot{
+        margin-left: 40px;
+    }
 }
